NIFI-14082 Refactored the rest of the Processors to be uniform when creating properties and relationships