@@ -21,8 +21,7 @@ import static org.apache.nifi.processors.gcp.util.GoogleUtils.GCP_CREDENTIALS_PR
 
 import com.google.api.gax.longrunning.OperationFuture;
 import com.google.cloud.vision.v1.AsyncBatchAnnotateImagesRequest;
-import java.util.Arrays;
-import java.util.Collections;
+
 import java.util.List;
 import org.apache.nifi.annotation.behavior.WritesAttribute;
 import org.apache.nifi.annotation.behavior.WritesAttributes;
@@ -47,29 +46,34 @@ public class StartGcpVisionAnnotateImagesOperation extends AbstractStartGcpVisio
             .expressionLanguageSupported(ExpressionLanguageScope.FLOWFILE_ATTRIBUTES)
             .required(false)
             .addValidator(StandardValidators.NON_EMPTY_VALIDATOR)
-            .defaultValue("{\n" +
-                    "    \"requests\": [{\n" +
-                    "        \"image\": {\n" +
-                    "            \"source\": {\n" +
-                    "                \"imageUri\": \"gs://${gcs.bucket}/${filename}\"\n" +
-                    "            }\n" +
-                    "        },\n" +
-                    "        \"features\": [{\n" +
-                    "            \"type\": \"${vision-feature-type}\",\n" +
-                    "            \"maxResults\": 4\n" +
-                    "        }]\n" +
-                    "    }],\n" +
-                    "    \"outputConfig\": {\n" +
-                    "        \"gcsDestination\": {\n" +
-                    "            \"uri\": \"gs://${output-bucket}/${filename}/\"\n" +
-                    "        },\n" +
-                    "        \"batchSize\": 2\n" +
-                    "    }\n" +
-                    "}")
+            .defaultValue("""
+                    {
+                        "requests": [{
+                            "image": {
+                                "source": {
+                                    "imageUri": "gs://${gcs.bucket}/${filename}"
+                                }
+                            },
+                            "features": [{
+                                "type": "${vision-feature-type}",
+                                "maxResults": 4
+                            }]
+                        }],
+                        "outputConfig": {
+                            "gcsDestination": {
+                                "uri": "gs://${output-bucket}/${filename}/"
+                            },
+                            "batchSize": 2
+                        }
+                    }""")
             .addValidator(StandardValidators.NON_EMPTY_VALIDATOR)
             .build();
-    private static final List<PropertyDescriptor> PROPERTIES = Collections.unmodifiableList(Arrays.asList(
-            JSON_PAYLOAD, GCP_CREDENTIALS_PROVIDER_SERVICE, OUTPUT_BUCKET, FEATURE_TYPE));
+    private static final List<PropertyDescriptor> PROPERTIES = List.of(
+            JSON_PAYLOAD,
+            GCP_CREDENTIALS_PROVIDER_SERVICE,
+            OUTPUT_BUCKET,
+            FEATURE_TYPE
+    );
 
     @Override
     public List<PropertyDescriptor> getSupportedPropertyDescriptors() {
